--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h1{font-size: 50px;}
 .half-width img {width: 100%;}
 
 .top-banner{
-    background-image: url(images/top-banner.png);
+    background-image: url(top-banner.png);
                     background-repeat: no-repeat;
                     
 }
@@ -31,7 +31,7 @@ section{
  }
 
  .middle{
-    background-image: url(images/dream-bg.png);
+    background-image: url(dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
                     
@@ -49,7 +49,7 @@ section{
 }
 
 .bottom{
-    background-image: url(images/exp-bg.png);
+    background-image: url(exp-bg.png);
                     background-repeat: no-repeat;
                     background-position: left;
                     
